--- a/src/index.scss
+++ b/src/index.scss
@@ -14,3 +14,19 @@ body {
 .ant-form-item-control-wrapper {
   width: 300px;
 }
+
+.dynamic-delete-button {
+  cursor: pointer;
+  position: relative;
+  top: 4px;
+  font-size: 24px;
+  color: #999;
+  transition: all 0.3s;
+}
+.dynamic-delete-button:hover {
+  color: #777;
+}
+.dynamic-delete-button[disabled] {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
