--- a/src/index.scss
+++ b/src/index.scss
@@ -17,8 +17,9 @@ body {
 
 .dynamic-delete-button {
   cursor: pointer;
-  position: relative;
-  top: 4px;
+  position: absolute;
+  top: 10px;
+  right: -30px;
   font-size: 24px;
   color: #999;
   transition: all 0.3s;
